--- a/Navino/app/src/main/res/layout/activity_maps.xml
+++ b/Navino/app/src/main/res/layout/activity_maps.xml
@@ -7,9 +7,9 @@
 
     <LinearLayout
         android:id="@+id/topPanel"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <fragment
             android:id="@+id/place_autocomplete_fragment"
@@ -17,8 +17,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_weight="5"/>
+            android:layout_weight="2" />
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -41,6 +43,29 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:context=".Navino" />
+
+                <LinearLayout
+                    android:id="@+id/navi"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_weight="5"
+                    android:orientation="horizontal"
+                    tools:ignore="RtlCompat">
+
+                    <TextView
+                        android:id="@+id/textDir"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#7a3369e8"
+                        android:gravity="center_horizontal"
+                        android:text="TextView"
+                        android:textColor="@android:color/background_light"
+                        android:textSize="30sp" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/llMapActionContainer"
@@ -66,6 +91,23 @@
                         android:padding="8dp"
                         android:text="Add Known Area"
                         android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/textSignout"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:gravity="center_horizontal"
+                        android:padding="8dp"
+                        android:text="Sign out"
+                        android:textSize="14sp"
+                        android:background="#3369e8"
+                        android:textColor="@android:color/background_light"
+                        />
+
+
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/llSaveOrClearContainer"
@@ -91,15 +133,6 @@
                         android:text="Save Area"
                         android:textSize="14sp" />
 
-                    <LinearLayout
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="8dp"
-                        android:background="@color/gray_e8">
-
-                    </LinearLayout>
-
                     <TextView
                         android:id="@+id/textClearDraw"
                         android:layout_width="match_parent"
@@ -112,6 +145,16 @@
                         android:padding="8dp"
                         android:text="Clear Area"
                         android:textSize="14sp" />
+
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@color/gray_e8">
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -125,6 +168,7 @@
                     android:visibility="gone"
                     android:layout_gravity="bottom"
                     android:baselineAligned="false">
+
                     <TextView
                         android:id="@+id/textSmallAddKnownArea"
                         android:layout_width="match_parent"
@@ -145,6 +189,17 @@
                         android:layout_marginTop="8dp"
                         android:background="@color/gray_e8">
 
+                        <TextView
+                            android:id="@+id/textGO2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:clickable="true"
+                            android:gravity="center_horizontal"
+                            android:padding="8dp"
+                            android:text="GO"
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <TextView
@@ -158,9 +213,22 @@
                         android:padding="8dp"
                         android:text="GO"
                         android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/textNav"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:clickable="true"
+                        android:gravity="center_horizontal"
+                        android:padding="8dp"
+                        android:text="Navigate"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
             </FrameLayout>
         </FrameLayout>
     </LinearLayout>
+
 </RelativeLayout>
