--- a/Navino/app/src/main/res/layout/activity_maps.xml
+++ b/Navino/app/src/main/res/layout/activity_maps.xml
@@ -114,6 +114,7 @@
                         android:gravity="center_horizontal"
                         android:padding="8dp"
                         android:text="Sign out"
+                        android:onClick="onSignoutClick"
                         android:textSize="14sp"
                         android:background="#3369e8"
                         android:textColor="@android:color/background_light" />
